--- a/js/package.json
+++ b/js/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "skill-sample-nodejs-audio-player",
+  "name": "Null Audio",
   "version": "1.0.0",
-  "description": "An audio player sample skill.",
+  "description": "Play nice sounds from nature for productivity and sleep.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,15 +9,17 @@
   "keywords": [
     "alexa",
     "skill",
-    "audio player"
+    "audio player",
+    "nature sounds",
+    "productivity"
   ],
-  "author": "Amazon.com",
+  "author": "dev.null",
   "license": "See license in ../LICENSE.txt",
   "dependencies": {
     "alexa-sdk": "^1.0.4"
   },
   "repository" : {
     "type" : "git",
-    "url" : "https://github.com/alexa/skill-sample-nodejs-audio-player"
+    "url" : "https://github.com/dev-nul1/devnull-alexa-skill"
   }
 }
